--- a/styles/main.css
+++ b/styles/main.css
@@ -225,13 +225,19 @@ section {
 .profile-img {
     width: 350px;
     height: 350px;
-    object-fit: cover;
+
+    object-fit: contain;      
+    object-position: center;  
+
     border-radius: 50%;
     border: 10px solid white;
     box-shadow: var(--shadow);
+    background-color: white;  
+    
     z-index: 2;
     position: relative;
 }
+
 
 .decoration-circle {
     position: absolute;
